--- a/BraveRewardsExample/Base.lproj/Main.storyboard
+++ b/BraveRewardsExample/Base.lproj/Main.storyboard
@@ -84,6 +84,13 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myC-t7-p9s">
+                                <rect key="frame" x="129.5" y="478" width="116" height="30"/>
+                                <state key="normal" title="Show Sample Ad"/>
+                                <connections>
+                                    <action selector="tappedServeSampleAd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fzn-0y-3dA"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -93,8 +100,10 @@
                             <constraint firstItem="hvd-Au-5z4" firstAttribute="top" secondItem="9Yi-J0-QPl" secondAttribute="bottom" constant="28" id="Gcp-v6-kel"/>
                             <constraint firstItem="9Yi-J0-QPl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lxh-PO-59a"/>
                             <constraint firstItem="fPD-d0-f26" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QKC-yA-2Y9"/>
+                            <constraint firstItem="myC-t7-p9s" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UGe-3J-vhU"/>
                             <constraint firstItem="Rn5-Tc-ZWe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="XUl-Lz-boD"/>
                             <constraint firstItem="fPD-d0-f26" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="Xh7-Tg-kpe"/>
+                            <constraint firstItem="9Yi-J0-QPl" firstAttribute="top" secondItem="myC-t7-p9s" secondAttribute="bottom" constant="28" id="dPM-a2-OO7"/>
                             <constraint firstItem="Rn5-Tc-ZWe" firstAttribute="leading" secondItem="fPD-d0-f26" secondAttribute="trailing" constant="-2" id="g73-1o-XqK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Rn5-Tc-ZWe" secondAttribute="trailing" constant="16" id="kx6-mc-c6y"/>
                         </constraints>
